Use JUnit-specific assertions if possible